--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,9 @@ exec --no-startup-id nm-applet
 
 ## Iniciando programas uteis
 
-exec --no-startup-id polybar-restart
+exec --no-startup-id "killall polybar ; sh $HOME/.config/polybar/launch.sh"
+exec --no-startup-id compton
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -56,6 +58,11 @@ bindsym $mod+d exec rofi -show drun
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+# Screenshot
+
+bindsym Print exec "deepin-screenshot -f"
+
 
 # change focus
 bindsym $mod+j focus left
