--- a/termite/config
+++ b/termite/config
@@ -4,10 +4,10 @@
 #bold_is_bright = true
 #cell_height_scale = 1.0
 #cell_width_scale = 1.0
-#clickable_url = true
-#dynamic_title = true
-font = Monospace 9
-#fullscreen = true
+clickable_url = true
+dynamic_title = true
+font = FiraCodeMedium 9
+fullscreen = false
 #icon_name = terminal
 #mouse_autohide = false
 #scroll_on_output = false
@@ -48,10 +48,11 @@ scrollback_lines = 10000
 [colors]
 
 # special
-foreground      = #f8f8f2
-foreground_bold = #f8f8f2
-cursor          = #f8f8f2
-background      = #282a36
+foreground      =  #f8f8f2
+foreground_bold =  #f8f8f2
+cursor          =  #f8f8f2
+background      = rgba(40, 42, 54, 0.9)  
+# 282a36
 
 # black
 color0  = #000000
