add some configs

--- a/polybar/config-top.ini
+++ b/polybar/config-top.ini
@@ -161,7 +161,7 @@ font-2 = "xos4 Terminus:size=12;2"
 
 modules-left = menu title
 modules-center = workspaces
-modules-right =  battery alsa checknetwork date sysmenu
+modules-right = spotify battery alsa checknetwork date sysmenu
 
 #window_switch keyboard 
 ; The separator will be inserted between the output of each module
@@ -206,7 +206,6 @@ tray-maxsize = 16
 ; Enable pseudo transparency
 ; Will automatically be enabled if a fully transparent
 ; background color is defined using `tray-background`
-tray-transparent = false
 
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
