--- a/i3/config
+++ b/i3/config
@@ -32,8 +32,9 @@ exec --no-startup-id nm-applet
 
 
 ## Iniciando programas uteis
+exec --no-startup-id "killall polybar ; sh ~/.config/poluybar/launch.sh"
 
-exec --no-startup-id polybar-restart
+exec --no-startup-id "killall mopidy ;mopidy"
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -179,6 +180,12 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+
+# Configs do scratchpad
+
+bindsym $mod+Shift+z move scratchpad
+bindsym $mod+z scratchpad show
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
