--- a/polybar/config-top.ini
+++ b/polybar/config-top.ini
@@ -161,7 +161,8 @@ font-2 = "xos4 Terminus:size=12;2"
 
 modules-left = menu title
 modules-center = workspaces
-modules-right = spotify battery alsa checknetwork date sysmenu
+modules-right = battery alsa date sysmenu
+; checknetwork
 
 #window_switch keyboard 
 ; The separator will be inserted between the output of each module
