--- a/i3/config
+++ b/i3/config
@@ -202,5 +202,5 @@ bindsym $mod+z scratchpad show
 #}
 for_window [class=".*"] border pixel 0
 bindcode $mod+48 exec ~/.i3/bin/i3-toggle-border
-exec --no-startup-id polybar-restart
+exec polybar-restart
 
